Remove DB migrations.

--- a/Minicore_Notas/appsettings.json
+++ b/Minicore_Notas/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-PSA84TC7; Database=Minicore_Web; Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server= NOMBRESERVIDORSQLSERVER ; Database= NOMBREBDD(CUALQUIERA); Trusted_Connection=True;TrustServerCertificate=True;"
+    //CAMBIAR EL CAMPO EN SERVER POR EL NOMBRE DE SU SERVIDOR
+    //CAMBIAR EL CAMPO EN DATABASE POR EL NOMBRE DE LA BASE DE DATOS
   }
 }
